--- a/views/subtraction_form.erb
+++ b/views/subtraction_form.erb
@@ -1,1 +1,17 @@
 <h1>New subtraction</h1>
+
+<form action="/wizard_subtract">
+  <label for="dog">
+    Subtract this:
+  </label>
+  <input id="dog" name="first_number" text="text">
+
+  <label for="cat">
+    from this:
+  </label>
+  <input id="cat" name="second_number" text="text">
+
+  <button>
+    Subtract!
+  </button>
+</form>
