--- a/views/divform.erb
+++ b/views/divform.erb
@@ -1,15 +1,15 @@
 <h1>New division</h1>
 
 <form action="/wizard_divide">
-  <label for="">
+  <label for="america">
     Divide this:
   </label>
-  <input id="" name="first_number" text="text">
+  <input id="america" name="first_number" text="text">
 
-  <label for="">
+  <label for="canada">
     by this:
   </label>
-  <input id="" name="second_num" text="text">
+  <input id="canada" name="second_number" text="text">
 
   <button>
     Divide!
