--- a/views/mult_form.erb
+++ b/views/mult_form.erb
@@ -1,5 +1,17 @@
 <h1>New multiplication</h1>
 
-<form action="/">
+<form action="/wizard_multiply">
+  <label for="snack">
+    Multiply this:
+  </label>
+  <input id="snack" name="first_number" text="text">
 
+  <label for="drink">
+    by this:
+  </label>
+  <input id="drink" name="second_number" text="text">
+
+  <button>
+    Multiply!
+  </button>
 </form>
